--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-2) Menu items.
 3) Highlighted menu items and character.
-4) New animations for walls (and explosions).
-5) Layers??? List that contains an elements for a different "levels" of the scene.
+4) Different actions into each menu item.
+5) New animations for walls (and explosions).
+6) Layers??? List that contains an elements for a different "levels" of the scene.
