Highlighted menu items done.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-3) Highlighted menu items and character.
+3) Highlighted character.
 4) Different actions into each menu item.
 5) New animations for walls (and explosions).
 6) Layers??? List that contains an elements for a different "levels" of the scene.
