--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-1) Impl character's animation.
+1) Improve character's animation.
 2) Use 3D model as a character.
 3) Highlighted character.
 4) Different actions into each menu item.
