Added simple bullet impl. Now you can fire by pressing a LMouse button with pushed LControl

--- a/TODO
+++ b/TODO
@@ -1,6 +1,11 @@
+5) New animations for walls (and explosions).
+   Hmm, it looks like better to make 'MoveTo' animation as an ancestor of the bullet animation.
+   All I need to do is to add a virtual method like responseOnCollide() or something like that.
+-) Collision detection.
+   Should all related stuff be moved into one place?
+   Otherwhise I have a double/triple/etc. checking...
 1) Improve character's animation.
-2) Use 3D model as a character.
 3) Highlighted character.
 4) Different actions into each menu item.
-5) New animations for walls (and explosions).
+2) Use 3D model as a character.
 6) Layers??? List that contains an elements for a different "levels" of the scene.
