Bullet's explosion implemented.
//------------------------------------
It is time to think about collisions and wall's animations.

--- a/TODO
+++ b/TODO
@@ -1,9 +1,7 @@
-5) New animations for walls (and explosions).
-   Hmm, it looks like better to make 'MoveTo' animation as an ancestor of the bullet animation.
-   All I need to do is to add a virtual method like responseOnCollide() or something like that.
--) Collision detection.
+7) Collision detection.
    Should all related stuff be moved into one place?
    Otherwhise I have a double/triple/etc. checking...
+5) New animations for walls.
 1) Improve character's animation.
 3) Highlighted character.
 4) Different actions into each menu item.
